samples/_failures_safe/1761598741_7ce5b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24cb571b.c: In function ‘main’:
./samples/SAFE/__tmp_24cb571b.c:133: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_24cb571b.c:132:5: error: expected declaration or statement at end of input
  132 |     char line[MAX_LINE_LEN
      |     ^~~~
